scrollbar-gutter to docs sidebar to avoid layout shifts

--- a/packages/docusaurus-theme-classic/src/theme/DocSidebar/Desktop/Content/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/DocSidebar/Desktop/Content/styles.module.css
@@ -8,7 +8,8 @@
 @media (min-width: 997px) {
   .menu {
     flex-grow: 1;
-    padding: 0.5rem;
+    padding: 0.5rem 0 0.5rem 0.5rem;
+    scrollbar-gutter: stable;
   }
 
   .menuWithAnnouncementBar {
